add surefire plugin and configuration