@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<aspectjweaver.version>1.6.8</aspectjweaver.version>
 		<aspectjrt.version>1.6.8</aspectjrt.version>
-	
+
 		<c3p0.version>0.9.1.2</c3p0.version>
 		<cglib.version>2.2.2</cglib.version>
 		<commons-collections.version>3.2.1</commons-collections.version>
@@ -28,6 +28,7 @@
 		<junit.version>4.9</junit.version>
 		<log4j.version>1.2.12</log4j.version>
 		<hsqldb.version>2.2.6</hsqldb.version>
+		<maven-surefire-plugin.version>2.6</maven-surefire-plugin.version>
 		<ojdbc6.version>11.1.0.7.0</ojdbc6.version>
 		<org.hibernate.version>4.0.0.Final</org.hibernate.version>
 		<org.hibernate-commons-annotations.version>4.0.1.Final
@@ -57,7 +58,7 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>${aspectjrt.version}</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
@@ -96,7 +97,7 @@
 			<artifactId>cglib-nodep</artifactId>
 			<version>${cglib.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
@@ -274,6 +275,39 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<id>all-tests</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<forkMode>never</forkMode>
+							<skip>false</skip>
+							<includes>
+								<include>**/*Test.java</include>
+
+							</includes>
+							<excludes>
+								<exclude>**/*DataTest.java</exclude>
+							</excludes>
+							<argLine>-Xms512m -Xmx2024m -XX:PermSize=64M -XX:MaxPermSize=256M
+							</argLine>
+						</configuration>
+					</execution>
+
+
+				</executions>
+
 			</plugin>
 		</plugins>
 	</build>
